fix wordwrap for side by side

--- a/public/less/d2h.less
+++ b/public/less/d2h.less
@@ -66,7 +66,7 @@
   tbody > tr > td {
     padding: 0px;
     border-spacing: 0px;
-    height: 23px;
+    height: 105%;
   }
 }
 
@@ -84,14 +84,12 @@
   display: inline-block;
   overflow-x: auto;
   width: 50%;
-  margin-right: -4px;
 }
 
 .d2h-code-line {
   white-space: pre;
   padding-left: 10px;
   padding-right: 10px;
-  height: 19px;
   display: inline-flex;
 }
 
@@ -99,7 +97,6 @@
   white-space: pre;
   padding-left: 5px;
   padding-right: 5px;
-  height: 19px;
   display: inline-flex;
 }
 
@@ -121,6 +118,7 @@
 
 .d2h-code-line-prefix {
   display: inline-flex;
+  margin-right: 10px;
 }
 
 .line-num1 {
@@ -141,11 +139,9 @@
 
 .d2h-code-linenumber {
   position: static;
-  display: table-cell;
   width: 52px;
   min-width: 65px;
   text-align: center;
-  height: 100%;
   background-color: #727a83;
   color: rgba(0, 0, 0, 0.5);
   border-width: 0 1px 0 1px;
@@ -162,7 +158,7 @@
 
 .d2h-code-side-linenumber {
   position: static;
-  display: tabl;
+  display: table-cell;
   width: 52px;
   min-width: 65px;
   text-align: center;
